(feat: strategy process): added classes - initial
